--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -24,9 +24,11 @@
         "prettier"
     ],
     "rules": {
+        "camelcase": "off",
         "prettier/prettier": "error",
         "react/prop-types": "off",
         "no-unused-expressions": "off",
+        "import/no-duplicates": "off",
         "import/extensions": [
             "error",
             "ignorePackages",
